# Rust-wallet-icp

./: .gitmodules  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/contract_backend/: Cargo.toml  contract_backend.did
src/contract_backend/src/: lib.rs
src/contract_frontend/: package.json
src/contract_frontend/src/: App.js
src/rust-wallet-icp-backend/: Cargo.toml  rust-wallet-icp-backend.did  tests.rs
src/rust-wallet-icp-backend/src/: lib.rs
wallet/: package-lock.json  package.json
wallet/src/cannister/: Cannister.js  contract_backend.did.js
wallet/src/pages/: _app.js  index.js
